--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,7 +52,8 @@ $primary: #fc0a7e;
 $header-bg-1: #E81179;
 $header-bg-2: #281362;
 $header-bg-mid: mix($header-bg-1, $header-bg-2);
-$header-full-height: 100px;
+$header-desktop-height: 100px;
+$header-mobile-height: 142px;
 
 /* -- Dark Mode -- */
 $body-bg-dark: black;
